Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-16051

[Gandiva][C++] Fix DATE_DIFF regression build

    XMLWordPrintableJSON

Details

    Description

      Modifying the order to subtract in Arrow implementation for DateDiff function.

       

      As is:

      Hive implementation: 1st parameter - 2st parameter

      Arrow implementation:  2st parameter - 1st parameter.

       

      To be:

      Hive implementation: 1st parameter - 2st parameter

      Arrow implementation:  1st parameter - 2st parameter.

       

      Attachments

        Issue Links

          Activity

            People

              johnnathanalmeida Johnnathan Rodrigo Pego de Almeida
              johnnathanalmeida Johnnathan Rodrigo Pego de Almeida
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m