ARROW-16051: [Gandiva][C++] Fix datediff regression build

Modifying the order to subtract in Arrow implementation for DateDiff function.

As is:
Hive implementation: 1st parameter - 2st parameter
Arrow implementation:  2st parameter - 1st parameter.

To be:
Hive implementation: 1st parameter - 2st parameter
Arrow implementation:  1st parameter - 2st parameter.

Closes #12736 from Johnnathanalmeida/fixbug/DateDiff

Authored-by: Johnnathan <johnnathanalmeida@gmail.com>
Signed-off-by: Pindikura Ravindra <ravindra@dremio.com>